@@ -23,8 +23,15 @@
  *  with Pdsh; if not, write to the Free Software Foundation, Inc.,
  *  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
 \*****************************************************************************/
+
+#if HAVE_CONFIG_H
+#  include <config.h>
+#endif
+
 #include <string.h>
+#include <stdio.h>
 #include "xmalloc.h"
+#include "xstring.h"
 #include "split.h"
 
 /* 
